General: Fixed overflow issues

--- a/src/components/Wallets/Wallets.scss
+++ b/src/components/Wallets/Wallets.scss
@@ -31,7 +31,7 @@
 
       .wallets__mint {
         width: calc(100% - 40px);
-        height: 200px;
+        min-height: 200px;
         // background-color: lightblue;
         background-color: $grey-regular;
 
@@ -45,7 +45,7 @@
         .wallets__mint__content__header {
           width: 100%;
           height: 25%;
-        //   background-color: lightgreen;
+          //   background-color: lightgreen;
 
           @include flexbox;
           justify-content: flex-start;
@@ -114,7 +114,7 @@
         .wallets__mint__content__footer {
           width: 100%;
           height: 25%;
-        //   background-color: lightgreen;
+          //   background-color: lightgreen;
 
           @include flexbox;
 
